--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>我的作業</title>
 </head>
 <body>
-    <a href="https://github.com/WangJie1208/3-6hw/blob/main/form.html">form.html</a>
+    <a href="https://wangjie1208.github.io/3-6hw/form.html">form.html</a>
     <br>
     <a href="https://github.com/WangJie1208/3-6hw/blob/main/inputtype.html">inputtype</a>
     <br>
