--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <a href="https://wangjie1208.github.io/3-6hw/form.html">form.html</a>
     <br>
-    <a href="https://github.com/WangJie1208/3-6hw/blob/main/inputtype.html">inputtype</a>
+    <a href="https://github.com/WangJie1208/3-6hw/blob/main/inputtype.html">inputtype.html</a>
     <br>
-    <a href="https://github.com/WangJie1208/3-6hw/blob/main/phone.html">phone</a>
+    <a href="https://github.com/WangJie1208/3-6hw/blob/main/phone.html">phone.html</a>
     <br>
-    <a href="https://github.com/WangJie1208/3-6hw/blob/main/select.html">select</a>
+    <a href="https://github.com/WangJie1208/3-6hw/blob/main/select.html">select.html</a>
 </body>
 </html>
